UI changes and auto populate with billing address option for new lead and job pages added